버그수정, 로그추가등