@@ -2,6 +2,8 @@ package com.earthtrip.planning.domain;
 
 import java.time.Instant;
 import java.time.LocalDate;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
@@ -25,7 +27,8 @@ public final class PlanningResource {
     public void update(LocalDate date,Map<String,Object> data,String state,Integer order,UUID actor,Instant now){apply(date==null?localDate:date,data==null?payload:data,state==null?status:state,order==null?sortOrder:order,actor,now);}
     public void relocate(UUID parent,LocalDate date,int order,UUID actor,Instant now){parentId=Objects.requireNonNull(parent);apply(Objects.requireNonNull(date),payload,status,order,actor,now);}
     public void delete(UUID actor,Instant now){deletedAt=now;updatedBy=actor;updatedAt=now;}
-    private void apply(LocalDate date,Map<String,Object> data,String state,int order,UUID actor,Instant now){if(order<0)throw new IllegalArgumentException("정렬 순서는 0 이상이어야 합니다.");localDate=date;payload=Map.copyOf(Objects.requireNonNull(data));status=text(state==null?"ACTIVE":state,40).toUpperCase(java.util.Locale.ROOT);sortOrder=order;updatedBy=Objects.requireNonNull(actor);updatedAt=Objects.requireNonNull(now);}
+    private void apply(LocalDate date,Map<String,Object> data,String state,int order,UUID actor,Instant now){if(order<0)throw new IllegalArgumentException("정렬 순서는 0 이상이어야 합니다.");localDate=date;payload=immutablePayload(data);status=text(state==null?"ACTIVE":state,40).toUpperCase(java.util.Locale.ROOT);sortOrder=order;updatedBy=Objects.requireNonNull(actor);updatedAt=Objects.requireNonNull(now);}
+    private static Map<String,Object> immutablePayload(Map<String,Object> data){Map<String,Object> copy=new LinkedHashMap<>();Objects.requireNonNull(data).forEach((key,value)->{if(value!=null)copy.put(Objects.requireNonNull(key),value);});return Collections.unmodifiableMap(copy);}
     private static String text(String value,int max){if(value==null||value.isBlank()||value.strip().length()>max)throw new IllegalArgumentException("필수 문자열 값을 확인해 주세요.");return value.strip();}
     public UUID id(){return id;}public UUID tripId(){return tripId;}public String type(){return type;}public UUID parentId(){return parentId;}public LocalDate localDate(){return localDate;}public Map<String,Object> payload(){return payload;}public String status(){return status;}public int sortOrder(){return sortOrder;}public UUID createdBy(){return createdBy;}public UUID updatedBy(){return updatedBy;}public Instant createdAt(){return createdAt;}public Instant updatedAt(){return updatedAt;}public Instant deletedAt(){return deletedAt;}public long version(){return version;}
 }
